# mcp-adapter

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TECHNICAL_SPECIFICATION.md  docker-compose.yml
.github/workflows/: ci.yml
examples/: example_workflow.py
file-server/: Dockerfile  README.md  file_server.py
gateway/: Dockerfile  gateway.py  servers.json
hello-world/: Dockerfile  README.md  hello_world.py
latex-server/: Dockerfile  server.py
latex-server/templates/: basic_resume.tex  my_cv.cls  simple_document.tex  us_map.tex
scripts/: install-hooks.sh  latex-watch.py
tests/: CLAUDE.md  README.md  README_TEST_FILES.md  cleanup_examples.py  cleanup_shared_files.py  cleanup_test_files.py  conftest.py  debug_mcp_error.py  mcp_session_helper.py  pyproject.toml  pytest_cleanup_plugin.py
tests/integration/: __init__.py  conftest.py  test_connectivity.py  test_file_operations.py  test_latex_workflow.py  test_mcp_initialization.py  test_pdf_fix.py  test_session_management.py  test_upload_debug.py
tests/security/: test_oauth_flow.py  test_security.py  test_service_reliability.py
tests/servers/: test_file_id_collision.py  test_file_server.py  test_gateway.py  test_hello_world.py  test_latex_server.py  test_mcp_servers.py  test_timestamp_urls.py
tests/unit/: test_gateway_core.py  test_latex_core.py  test_utils.py
