[project]
name = "mcp-adapter-tests"
version = "0.1.0"
description = "Test suite for MCP Adapter"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.10",
    "fastapi>=0.115",
    "pydantic>=2.11",
    "uvicorn>=0.35",
    "httpx>=0.28",
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.2",
    "coverage>=7.9",
    "jinja2>=3.1",
    "aiofiles>=24.1"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short"]

# Configure pytest to auto-cleanup test artifacts
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

# Test cleanup configuration
markers = [
    "cleanup: automatically cleanup test artifacts after test run"
]